[gd_scene load_steps=2 format=3 uid="uid://cnv7eyqf0tcrb"]

[ext_resource type="Script" path="res://Scripts/StageStats.gd" id="1_rphni"]

[node name="StageStats" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rphni")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NewHighScore" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="HighScoreLabel" type="Label" parent="VBoxContainer/NewHighScore"]
layout_mode = 2
text = "New High Score: "

[node name="HighScore" type="Label" parent="VBoxContainer/NewHighScore"]
layout_mode = 2

[node name="Score" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer/Score"]
layout_mode = 2
text = "Score: "

[node name="Score" type="Label" parent="VBoxContainer/Score"]
layout_mode = 2

[node name="Accuracy" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AccuracyLabel" type="Label" parent="VBoxContainer/Accuracy"]
layout_mode = 2
text = "Accuracy: "

[node name="Accuracy" type="Label" parent="VBoxContainer/Accuracy"]
layout_mode = 2

[node name="PreviousHighScore" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HighScoreLabel" type="Label" parent="VBoxContainer/PreviousHighScore"]
layout_mode = 2
text = "Previous High Score: "

[node name="HighScore" type="Label" parent="VBoxContainer/PreviousHighScore"]
layout_mode = 2

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to menu"

[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
